<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_simple_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SimpleTestActivity">

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="140dp"
        android:text="SCORE"
        android:textColor="#000000"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="236dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:text="Translate:"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/multiple"
        android:layout_width="362dp"
        android:layout_height="433dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>